[gd_scene load_steps=16 format=3 uid="uid://oj0pcpf8wyyl"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_th58a"]
[ext_resource type="Texture2D" uid="uid://cly0nj1i6mtgx" path="res://assets/charge_bar/under 1.png" id="2_hq05b"]
[ext_resource type="Texture2D" uid="uid://ot3wf5gm17yw" path="res://assets/charge_bar/under 2.png" id="3_t8vs2"]
[ext_resource type="Texture2D" uid="uid://dykhh5i631dmu" path="res://assets/charge_bar/progress.png" id="4_v6c44"]
[ext_resource type="Texture2D" uid="uid://cjkxey2jyxt8l" path="res://assets/charge_bar/over 1.png" id="4_yc41i"]
[ext_resource type="Texture2D" uid="uid://bs50e1ne1wfkv" path="res://assets/charge_bar/over 2.png" id="5_6oo0c"]
[ext_resource type="Texture2D" uid="uid://bboekewk3vval" path="res://assets/charge_bar/light_texture.png" id="7_hmqby"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pf2us"]
radius = 57.0
height = 230.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b6laq"]
radius = 47.0
height = 168.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_s01qa"]
frames = 2
frame_0/texture = ExtResource("2_hq05b")
frame_0/duration = 0.1
frame_1/texture = ExtResource("3_t8vs2")
frame_1/duration = 0.1

[sub_resource type="AnimatedTexture" id="AnimatedTexture_aiakn"]
frames = 2
frame_0/texture = ExtResource("4_yc41i")
frame_0/duration = 0.1
frame_1/texture = ExtResource("5_6oo0c")
frame_1/duration = 0.1

[sub_resource type="Animation" id="Animation_4i2lf"]
resource_name = "blinking_light"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0.0, 8.0, 0.0, 8.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skooe"]
_data = {
"blinking_light": SubResource("Animation_4i2lf")
}

[sub_resource type="Animation" id="Animation_nppbl"]
resource_name = "shot_spawn_flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShotSpawnFlash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShotSpawnFlash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_youp4"]
_data = {
"shot_spawn_flash": SubResource("Animation_nppbl")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(-1, 0)
collision_mask = 64
script = ExtResource("1_th58a")
SPECIAL_CHARGE_MAX = 20
SPECIAL_CHARGE_COST = 20
metadata/_edit_lock_ = true

[node name="BorderCollider" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pf2us")
metadata/_edit_lock_ = true

[node name="PlaneAnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-10, 4)
scale = Vector2(0.5, 0.5)
metadata/_edit_lock_ = true

[node name="DeathArea" type="Area2D" parent="."]
collision_mask = 60
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="DeathCollider" type="CollisionShape2D" parent="DeathArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_b6laq")
debug_color = Color(0.631373, 0.47451, 0.635294, 0.419608)

[node name="SpecialChargeBar" type="TextureProgressBar" parent="."]
offset_left = -24.0
offset_top = 31.0
offset_right = 92.0
offset_bottom = 72.0
scale = Vector2(0.5, 0.5)
max_value = 15.0
value = 10.0
texture_under = SubResource("AnimatedTexture_s01qa")
texture_over = SubResource("AnimatedTexture_aiakn")
texture_progress = ExtResource("4_v6c44")
texture_progress_offset = Vector2(0, 4)
metadata/_edit_group_ = true

[node name="PointLight2D" type="PointLight2D" parent="SpecialChargeBar"]
position = Vector2(58, 20)
scale = Vector2(2, 1.93104)
color = Color(1, 0.882353, 0.862745, 1)
energy = 0.0
texture = ExtResource("7_hmqby")
texture_scale = 0.5

[node name="BlinkingLightAnimationPlayer" type="AnimationPlayer" parent="SpecialChargeBar"]
libraries = {
"": SubResource("AnimationLibrary_skooe")
}

[node name="ShotBasicTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="ShotSpecialTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShotSpawnFlash" type="Sprite2D" parent="."]
position = Vector2(69, 41)
scale = Vector2(0.25, 0.25)
hframes = 4

[node name="ShotInstantiateMarker" type="Marker2D" parent="."]
position = Vector2(69, 41)

[node name="ShotSpawnFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_youp4")
}
speed_scale = 4.0

[node name="ShotBasicSFX" type="AudioStreamPlayer2D" parent="."]

[node name="ShotSpecialSFX" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="DeathArea" to="." method="_on_death_area_entered"]
[connection signal="timeout" from="ShotBasicTimer" to="." method="_on_shot_basic_timer_timeout"]
[connection signal="timeout" from="ShotSpecialTimer" to="." method="_on_shot_special_timer_timeout"]
